dnl Process this file with autoconf to produce a configure script.
AC_INIT(joy2script.c)
AM_INIT_AUTOMAKE(joy2script, 2.0.0)
AM_CONFIG_HEADER(config.h)
AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX

dnl Checks for header files.
AC_STDC_HEADERS

dnl Check for site-specific configuration
AC_OUTPUT(Makefile)
